re-enable warnings in makefiles

--- a/hello_02_post_json/Makefile
+++ b/hello_02_post_json/Makefile
@@ -34,6 +34,7 @@ NACL_SDK_ROOT?=$(abspath $(dir $(THIS_MAKEFILE))../..)
 
 # Project Build flags
 # WARNINGS:=-Wno-long-long -Wall -Wswitch-enum -pedantic -Werror
+WARNINGS:=-Wno-long-long -Wall -Wswitch-enum -pedantic
 CXXFLAGS:=-pthread -std=gnu++98 $(WARNINGS)
 CCFLAGS:=-pthread -std=c99 $(WARNINGS)
 LDFLAGS:=-pthread
