--- a/hello_03_njf_demo/Makefile
+++ b/hello_03_njf_demo/Makefile
@@ -31,7 +31,7 @@ THIS_MAKEFILE:=$(abspath $(lastword $(MAKEFILE_LIST)))
 NACL_SDK_ROOT?=$(abspath $(dir $(THIS_MAKEFILE))../..)
 
 # Project Build flags
-# WARNINGS:=-Wno-long-long -Wall -Wswitch-enum -pedantic -Werror
+WARNINGS:=-Wno-long-long -Wall -Wswitch-enum -pedantic -Werror
 # CXXFLAGS:=-pthread -std=gnu++98 $(WARNINGS)
 CXXFLAGS:=-pthread -std=c99 $(WARNINGS) $(INCDIR)
 
